@@ -1,4 +1,7 @@
 2008-08-06 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/conn.[ch]: added new function conn_open_ssl_nb.
+
+2008-08-06 Alexander Malysh <amalysh at kannel.org>
     * configure.in, configure: added MacOSX10.5.sdk
 
 2008-08-02 Alexander Malysh <amalysh at kannel.org>
